[gd_scene load_steps=9 format=3 uid="uid://bs0pcoipmi02e"]

[ext_resource type="Script" uid="uid://bo2ljbj7ofr28" path="res://scripts/enemy.gd" id="1_5uy6h"]
[ext_resource type="Texture2D" uid="uid://beebfko0lf32" path="res://assets/enemy_saucer.png" id="1_7p1mj"]
[ext_resource type="PackedScene" uid="uid://d1juw0q5eebds" path="res://scenes/enemy_paths.tscn" id="2_md0e3"]
[ext_resource type="PackedScene" uid="uid://dfe1npfai1u70" path="res://scenes/explosion.tscn" id="4_c4w8v"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7p1mj"]
radius = 36.0139

[sub_resource type="Animation" id="Animation_4ra3w"]
resource_name = "flash"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.15999, 0.16, 0.200005, 0.239995),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.254902, 0, 1), Color(1, 1, 1, 1), Color(1, 0.254902, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 0.254902, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_5uy6h"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c4w8v"]
_data = {
&"RESET": SubResource("Animation_5uy6h"),
&"flash": SubResource("Animation_4ra3w")
}

[node name="Enemy" type="Area2D" groups=["enemies"]]
script = ExtResource("1_5uy6h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7p1mj")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_7p1mj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_c4w8v")
}

[node name="EnemyPaths" parent="." instance=ExtResource("2_md0e3")]

[node name="Explosion" parent="." instance=ExtResource("4_c4w8v")]
visible = false

[node name="GunCoolDown" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="GunCoolDown" to="." method="_on_gun_cool_down_timeout"]
